fix: use the width instead of min-width to avoid select box resizing inappropriately when the content becomes too long

--- a/ember/app/styles/styles.css
+++ b/ember/app/styles/styles.css
@@ -32,18 +32,18 @@ div.login-box h1{
   width: 100%;
 }
 
-/*form */
+/* FORM */
 .row.row_element {
   margin-bottom: 14px;
   margin-top: 14px;
 }
 
 .row.row_element select {
-  min-width: 100%;
+  width: 100%;
 }
 
 .row.row_element input {
-  min-width: 100%;
+  width: 100%;
 }
 
 section.row h2{
